--- a/1.04_activity_1.md
+++ b/1.04_activity_1.md
@@ -2,7 +2,7 @@
 
 Refer to the file `files_for_activities/file1.csv` for this exercise.
 
-1. Load data (`file1.csv`) in a new Jupyter notebook.
+1. Continue in the same Jupyter notebook as the lesson
 2. Write the code to clean the columns 'ic4' and 'ic5' of null values in the dataframe.
 3. Use the `head()` to check the new dataframe.
 
